--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ p {
 .ui.header {
     font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif!important;
     font-weight: 900!important;
+    text-transform: capitalize !important;
 
 }
 .ui.secondary.pointing.menu .item {
@@ -18,6 +19,4 @@ p {
     font-size: 17px;
 }
 
-a.item{
-    text-transform: uppercase!important;
-}
+
