--- a/frontend/src/components/navigation/desktop/navigationItems/logo.css
+++ b/frontend/src/components/navigation/desktop/navigationItems/logo.css
@@ -1,4 +1,10 @@
-.responsive {
-  width: 100% !important;
-  height: auto !important;
+.Logo {
+  background-color: transparent;
+  padding: 2px;
+  height: 4.5em;
+  box-sizing: border-box;
+}
+.Logo img{
+  height: 100%;
+  vertical-align: middle;
 }
