--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    background-color: #f8f8f8 !important;
+    background-color: #e5e5e5 !important;
     /*background-image: linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),*/
     /*linear-gradient(#eee .1em, transparent .1em) !important;*/
     /*background-size: 100% 1.2em !important;*/
@@ -33,6 +33,12 @@ h3 {
     color: #38aed0 !important;
     font-size: 1.5em !important;
 }
+
+h5 {
+    color: rgba(0,0,0,0.6) !important;
+    font-size: 1.33em !important;
+}
+
 
 h1,h2,h3,h4, h5, h6 {
     font-family: Merriweather, serif !important;
