--- a/frontend/src/components/navigation/desktop/navigationItems/Logo/Logo.module.css
+++ b/frontend/src/components/navigation/desktop/navigationItems/Logo/Logo.module.css
@@ -1,8 +1,10 @@
 .myStyles {
     box-sizing: border-box;
-    height: 3.5em;
-    background-color: #f8f8f8;
+    height:2.5em;
+    padding-top: 2px;
+    background-color: transparent;
     border-radius: 5px;
+
 }
 
 .myStyles  img {
