--- a/frontend/src/components/About/AboutContainer.module.css
+++ b/frontend/src/components/About/AboutContainer.module.css
@@ -1,6 +1,8 @@
-.segment{
-    padding: 2em  !important;
+.segment {
+    border: 1px solid #ccc !important;
+    padding: 30px 2.5% !important;
+    position: relative !important;
+    background: #fff !important;
+    margin-bottom: 30px !important;
 }
-.header{
-    text-transform: uppercase!important;
-}
+
