--- a/frontend/src/components/Home/HomepageHeading.module.css
+++ b/frontend/src/components/Home/HomepageHeading.module.css
@@ -1,6 +1,6 @@
 .segment {
     border: 1px solid #ccc !important;
-    padding: 30px 5% 30px 5% !important;
+    padding: 30px 2.5% !important;
     position: relative !important;
     background: #fff !important;
     margin-bottom: 30px !important;
