--- a/frontend/src/components/navigation/desktop/navigationItems/Topbar/TopBar.css
+++ b/frontend/src/components/navigation/desktop/navigationItems/Topbar/TopBar.css
@@ -1,5 +1,5 @@
 .TopBar{
-    background: #2cc72e url(gplaypattern.png) repeat!important;
+    background-color: #2cc72e!important; ;
     border: none!important;
     box-shadow: none!important;
 }
