--- a/frontend/src/components/navigation/desktop/navigationItems/NavigationItems.css
+++ b/frontend/src/components/navigation/desktop/navigationItems/NavigationItems.css
@@ -3,11 +3,14 @@
 }
 
 .ui.tiny.menu .item {
-    font-size: 1.3em !important;
     text-transform: capitalize !important;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    font-family: "Open Sans", sans-serif !important;
+
 }
 
-.ui.tiny.top.fixed.nine.item.menu .item:hover {
+.ui.tiny.top.fixed.eight.item.menu .item:hover {
     background-color: rgb(44, 199, 62) !important;
     color: #ffffff;
 
