--- a/frontend/src/components/About/AboutContainer.module.css
+++ b/frontend/src/components/About/AboutContainer.module.css
@@ -3,6 +3,6 @@
     padding: 30px 2.5% !important;
     position: relative !important;
     background: #fff !important;
-    margin-bottom: 30px !important;
+    margin: 4em 0 2em 0 !important;
 }
 
