--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,10 @@
 
 body {
     font-family: "Open Sans", sans-serif !important;
-    font-style: normal !important;
-    text-shadow: 0 0 1px transparent !important;
-    background: #878787 url(assets/gray_jean.png) !important;
+    background: #fefefe url(assets/pattern.png) !important;
 
 }
+
 
 
 
