--- a/frontend/src/components/Home/Welcome/HomeWelcome.module.css
+++ b/frontend/src/components/Home/Welcome/HomeWelcome.module.css
@@ -9,7 +9,6 @@
 }
 
 .col {
-    border: 1px solid #ccc;
     padding: 2em !important;
     background-color: #ffffff;
     position: relative;
@@ -20,8 +19,8 @@
     letter-spacing: normal;
     font-family: Merriweather, serif;
     line-height: 40px;
-    font-weight: 900;
-    text-transform: uppercase;
+    font-weight: 500;
+    text-transform: capitalize;
 
 }
 
