--- a/frontend/src/components/navigation/Navbar.css
+++ b/frontend/src/components/navigation/Navbar.css
@@ -1,13 +1,35 @@
 .ui.borderless.menu {
-  background-color: #0765bc;
-  box-shadow: none;
-  flex-wrap: wrap;
-  border: none;
-  padding-left: 0;
-  padding-right: 0;
+    border-radius: 0!important;
+    box-shadow: none;
+    flex-wrap: wrap;
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
+.ui.borderless.menu .item {
+    color: #f8f8f8 !important;
+    text-transform: uppercase;
+}
+
+
+.ui.menu .ui.dropdown .menu {
+     /*background: linear-gradient(45deg, #57cfb0, #2ab5d3) !important*/
+    background-color:  #2cc72e!important;
+}
+
+
+.ui.borderless.fluid.top.fixed.fixedStyle.menu .item{
+    color: #ffffff !important;
+
 }
 
 .ui.borderless.menu .header.item {
-  font-size: 18px;
-  font-weight: 400;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.mySegment {
+    padding: 0 !important;
 }
