--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
     top: 0;
     border-width: 3vh 0 0 50vw;
     border-style: solid;
-    border-color: #efefef  transparent transparent transparent;
+    border-color: #f4f43f  transparent transparent transparent;
 }
 
 .sesgoarriba-small {
@@ -15,10 +15,10 @@
     top: 0;
     border-width: 3vh 50vw 0 0;
     border-style: solid;
-    border-color: #efefef transparent transparent transparent;
+    border-color: #f4f43f transparent transparent transparent;
 }
 .pattern{
-    background-color: #343434 !important;
+    background-color: #2cc72e !important;
     color: #bebebe;
 }
 
