--- a/frontend/src/components/Home/HomepageHeading.module.css
+++ b/frontend/src/components/Home/HomepageHeading.module.css
@@ -1,6 +1,7 @@
 .segment {
-    padding: 30px 2.5% !important;
-    margin-bottom: 30px !important;
+    padding: 2em 2.5% !important;
+    margin-bottom: 60px !important;
+    background-color: #fefefe!important;
 }
 
 
