--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,6 @@ body {
 
 
 .ui.button{
-    background-color: #8ccf69!important;
+    background-color: #2cc72e!important;
     color: #fefefe!important;
 }
