--- a/frontend/src/components/Home/HomepageHeading.module.css
+++ b/frontend/src/components/Home/HomepageHeading.module.css
@@ -33,7 +33,7 @@
 
 
 .myp {
-    font-size: 1.5em !important;
+    font-size: 2.5em !important;
 }
 
 
@@ -47,13 +47,11 @@
     position: relative;
     text-align: left;
     background-image: url('../../assets/home/home.png');
-    color: #ffffff;
-    height: 80vh;
+    height: 570px;
     background-position: center center;
     background-attachment: fixed;
-    opacity: 0.7;
     background-size: cover;
-    background-color: #464646;
+    background-color: #f4f43f;
     background-repeat: no-repeat;
 }
 
@@ -77,7 +75,7 @@
 }
 
 .segment p {
-    font-size: 1em !important;
+    font-size: 1.1em !important;
     line-height: 1.4 !important;
     margin: 10px 0 !important;
     white-space: pre-wrap !important;
